--- a/Ninestars/css/style.css
+++ b/Ninestars/css/style.css
@@ -286,7 +286,6 @@
 	font-weight:600;
 }
 #port h2{
-	margin:2% 0 0 0;
 	font-size:2rem;
 	line-height:1.4;
 	color:#4e4039;
@@ -352,12 +351,54 @@
 	background-color:#fef8f5 !important;
 }
 .accordion-item button{
-	    color: #343a40;
+	 color: #343a40;
 }
 .accordion-item button:hover{
 	    color: #c54811;
 }
-/*.............................question section...................................*/
+#question .accordion-button:not(.collapsed)::before{
+	background-image: url(../image/faq.svg);
+	transform:rotate(-180deg);
+}
+#question .accordion-button::before{
+	flex-shrink:0;
+	width:1.25rem;
+	height:1.25rem;
+	margin:0 22px 0px 0px;
+	content:"";
+	background-image:url(../image/faq.svg);
+	background-repeat:no-repeat;
+	background-size:1.25rem;
+	transition:transform .2s ease-in-out;
+}
+#question .accordion-button::after{
+	display:none;
+}
+#question .accordion-button:focus{
+	z-index:3;
+	border-color:red;
+	outline:0;
+	box-shadow:none;
+}
+#question .accordion-button:not(.collapsed) {
+    color: #000;
+    background-color: #e7f1ff;
+    box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
+}
+#question .accordion-body{
+	padding-left:17%;
+}
+@media(min-width:720px){
+	#question .accordion-body{
+	padding-left:9%;
+	}
+}
+@media(min-width:720px){
+	#question .accordion-body{
+	padding-left:6%;
+	}
+}
+/*.............................team section...................................*/
 .team-title h3{
 	margin:5% 0 0 0;
 	color:#c2b7b1;
@@ -379,4 +420,93 @@
 	width:4rem;
 	height:1rem;
 	border-bottom:2px solid #eb5d1e;
+}
+/*..................clients section.......................*/
+.client{
+	background-color:#fef8f5;
+	padding-bottom:5%;
+}
+.client-title h3{
+	margin:5% 0 0 0;
+	color:#c2b7b1;
+	font-weight:600;
+}
+.client-title h2{
+	margin:1% 0 0 0;
+	font-size:2rem;
+	line-height:1.1;
+	color:#4e4039;
+	font-weight:700;
+	position:relative;
+}
+.client-title h2::after{
+	content:"";
+	position:absolute;
+	display:block;
+	left:47%;
+	width:4rem;
+	height:1rem;
+	border-bottom:2px solid #eb5d1e;
+}
+/*.......................contact section .........................*/
+.contact{
+	padding-bottom:5%;
+}
+.contact-title h3{
+	margin:5% 0 0 0;
+	color:#c2b7b1;
+	font-weight:600;
+}
+.contact-title h2{
+	margin:1% 0 0 0;
+	font-size:2rem;
+	line-height:1.1;
+	color:#4e4039;
+	font-weight:700;
+	position:relative;
+}
+.contact-title h2::after{
+	content:"";
+	position:absolute;
+	display:block;
+	left:47%;
+	width:4rem;
+	height:1rem;
+	border-bottom:2px solid #eb5d1e;
+}
+/*...........................contact section.........................*/
+.contact-info{
+	background-color:#fff;
+	margin-top:4rem;
+	padding:30px;
+	border-bottom:2px solid #eb5d1e;
+	border-top:2px solid #eb5d1e;
+}
+#contact .contact-info i{
+	width:44px;
+	height:44px;
+	color: #eb5d1e;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	background-color:#fdf1ec;
+	border-radius:50%;
+	float:left;
+	font-size:1.1rem;	
+}
+#contact .contact-info i:hover{
+	color:#fff;
+	background-color:#eb5d1e;
+}
+#contact .contact-info p{
+	margin:0 0 2rem 4rem;
+	font-size: 1rem;
+	font-weight:500;
+    color: #ab9d95;
+}
+#contact .contact-info h4{
+	margin-left:4rem;
+	font-size: 1.5rem;
+	font-weight:500;
+    color: #7a6960;
 }
